added account overview components and requesting broker data from backend

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 	<title>Investing Dashboard</title>
 </head>
 <body>
-	<main>
-		<div id="root"></div>
+	<main id="dashboard-main">
+		<div id="app-root"></div>
 	</main>
 </body>
 </html>
